crates/math-core/tests/snapshots/error_test__curly_close_without_open.snap
---
source: crates/math-core/tests/error_test.rs
expression: "}"
---
Error: Unmatched closing token: "}".
   ╭─[ <input>:1:1 ]
   │
 1 │ }
   │ ┬  
   │ ╰── no matching opening for this
───╯
